Avoided UnsupportedEncodingException by using standard charset